--- a/css/meinpreis.css
+++ b/css/meinpreis.css
@@ -8,7 +8,18 @@ div.meinpreis_buttons {
 	text-align:right;
 }
 
-div.meinpreis_copy {
+img.meinpreis_product {
 	float:left;
+	border:0;
+	margin:0;
+}
+
+div.meinpreis_twocolumn {
+	float:left;
+	width:50%;
+}
+
+div.meinpreis_clear {
+	clear:left;
 }
 
