--- a/css/meinpreis.css
+++ b/css/meinpreis.css
@@ -9,9 +9,9 @@ div.meinpreis_buttons {
 }
 
 img.meinpreis_product {
-	float:left;
-	border:0;
-	margin:0;
+	float:left !important;
+	border:0 !important;
+	margin:0 !important;
 }
 
 div.meinpreis_twocolumn {
